--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
+  },
+  "dependencies": {
+    "swiper": "^11.2.10"
   }
 }
